src/objects/SFDC_Class__c.object
<CustomObject>
    <description>Track the date and location of where your various Courses will be taught, and who has enrolled in this Class.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Instructor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Classes</relationshipLabel>
        <relationshipName>R00N40000001QAyhEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Offered__c</fullName>
        <label>Date Offered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <label>Facility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Live - Customer Site</fullName>
                </value>
                <value>
                    <fullName>Live - Teleconference</fullName>
                </value>
                <value>
                    <fullName>Live - Metrostudy Site</fullName>
                </value>
                <value>
                    <fullName>Recorded Session</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Capacity__c</fullName>
        <label>Max Capacity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This links the class to the course</description>
        <label>Course</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>R00N40000001QAyiEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Class</label>
    <listViews>
        <fullName>AllCourses</fullName>
        <columns>NAME</columns>
        <columns>Product2__c</columns>
        <columns>Facility__c</columns>
        <columns>Contact__c</columns>
        <columns>Max_Capacity__c</columns>
        <columns>Date_Offered__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Courses</label>
    </listViews>
    <listViews>
        <fullName>Class_List</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Class List</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>HA_Training</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Housing Analysis</value>
        </filters>
        <label>HA Training</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PublicSpeaking</fullName>
        <columns>NAME</columns>
        <columns>Product2__c</columns>
        <columns>Date_Offered__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Speaking</value>
        </filters>
        <label>Public Speaking</label>
    </listViews>
    <listViews>
        <fullName>Training_Courses</fullName>
        <columns>NAME</columns>
        <columns>Product2__c</columns>
        <columns>Date_Offered__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product2__c</field>
            <operation>contains</operation>
            <value>training</value>
        </filters>
        <label>Training Courses</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>